--- a/index.html
+++ b/index.html
@@ -2,8 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Personal portfolio of Theerakarn Maiwong" />
+    <meta property="og:title" content="Theerakarn Maiwong Portfolio" />
+    <meta property="og:description" content="Personal portfolio of Theerakarn Maiwong" />
+    <meta property="og:image" content="/favicon.svg" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://theerakarnm.dev" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Theerakarn Maiwong Portfolio" />
+    <meta name="twitter:description" content="Personal portfolio of Theerakarn Maiwong" />
+    <meta name="twitter:image" content="/favicon.svg" />
     <title>Say Hi, Theerakarnm :)</title>
   </head>
   <body>
