--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <meta name="twitter:title" content="Theerakarn Maiwong Portfolio" />
     <meta name="twitter:description" content="Personal portfolio of Theerakarn Maiwong" />
     <meta name="twitter:image" content="/favicon.svg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Say Hi, Theerakarnm :)</title>
   </head>
   <body>
